✨ [DSHB][UI] Added a cleared div at the bottom of a line to make sure there is no problem (fix on Firefox)

--- a/src/dashboards/src/css/style.scss
+++ b/src/dashboards/src/css/style.scss
@@ -517,6 +517,11 @@ button {
       white-space: pre;
       overflow: hidden;
     }
+    .sgvl-bottom {
+      clear:both;
+      height:0;
+      overflow: hidden;
+    }
     .sgvl-value {
       white-space: pre;
       float:right;
